--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
     "joi": "^17.11.0",
+    "memorystore": "^1.6.7",
     "method-override": "^3.0.0",
     "mongoose": "^7.6.3",
     "multer": "^1.4.5-lts.1",
